Refactor header and mission section: update logo SVG for improved design and add new mission icons for enhanced visual representation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html">Foundation</a></div>
+        <div class="logo">
+            <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="vertical-align:middle;width:1.5em;height:1.5em;margin-right:0.3em;">
+                <!-- Network Nodes Icon -->
+                <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="1.5" fill="none" />
+                <circle cx="4.5" cy="4.5" r="2" stroke="currentColor" stroke-width="1.5" fill="none" />
+                <circle cx="19.5" cy="4.5" r="2" stroke="currentColor" stroke-width="1.5" fill="none" />
+                <circle cx="4.5" cy="19.5" r="2" stroke="currentColor" stroke-width="1.5" fill="none" />
+                <circle cx="19.5" cy="19.5" r="2" stroke="currentColor" stroke-width="1.5" fill="none" />
+                <line x1="12" y1="9" x2="12" y2="4.5" stroke="currentColor" stroke-width="1.5" />
+                <line x1="12" y1="15" x2="12" y2="19.5" stroke="currentColor" stroke-width="1.5" />
+                <line x1="9" y1="12" x2="4.5" y2="12" stroke="currentColor" stroke-width="1.5" />
+                <line x1="15" y1="12" x2="19.5" y2="12" stroke="currentColor" stroke-width="1.5" />
+            </svg>
+            <a href="index.html">Foundation</a>
+        </div>
         <nav class="nav-container">
             <ul>
                 <li class="dropdown">
@@ -68,21 +82,33 @@
             <div class="mission-grid">
                 <div class="mission-item">
                     <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A11.978 11.978 0 0 1 12 13.5c-2.998 0-5.74-1.1-7.843-2.918m0 0A8.959 8.959 0 0 0 3 12c0-.778.099-1.533.284-2.253m0 0A11.953 11.953 0 0 0 12 10.5c2.998 0 5.74 1.1 7.843 2.918" />
+                        <!-- Research Icon: Magnifying Glass over Document -->
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75A2.25 2.25 0 0 0 14.25 4.5h-7.5A2.25 2.25 0 0 0 4.5 6.75v10.5A2.25 2.25 0 0 0 6.75 19.5h4.75" />
+                        <circle cx="17" cy="17" r="3" stroke="currentColor" stroke-width="1.5" fill="none" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-1.5-1.5" />
                     </svg>
                     <h3>Holistic Approach</h3>
                     <p>Addressing interconnected global challenges with comprehensive strategies.</p>
                 </div>
                 <div class="mission-item">
                     <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5L3 9.75l9 5.25 9-5.25-9-5.25zm0 10.5v4.5m0 0a2.25 2.25 0 0 1-2.25-2.25m2.25 2.25a2.25 2.25 0 0 0 2.25-2.25" />
+                        <!-- Community Icon: Three People Together -->
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17 20.25v-2.25A2.25 2.25 0 0 0 14.75 15.75h-5.5A2.25 2.25 0 0 0 7 18v2.25" />
+                        <circle cx="12" cy="9" r="3" stroke="currentColor" stroke-width="1.5" fill="none" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 20.25v-1.5A2.25 2.25 0 0 0 17.25 16.5M4.5 20.25v-1.5A2.25 2.25 0 0 1 6.75 16.5" />
+                        <circle cx="6.75" cy="13.5" r="2.25" stroke="currentColor" stroke-width="1.5" fill="none" />
+                        <circle cx="17.25" cy="13.5" r="2.25" stroke="currentColor" stroke-width="1.5" fill="none" />
                     </svg>
                     <h3>Community Empowerment</h3>
                     <p>Working alongside communities to build resilience and drive local solutions.</p>
                 </div>
                 <div class="mission-item">
                     <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h12A2.25 2.25 0 0 0 20.25 14.25V3M3.75 3v-1.5A2.25 2.25 0 0 1 6 0h12a2.25 2.25 0 0 1 2.25 2.25v1.5M3.75 3h16.5M16.5 9.75h.008v.008H16.5V9.75Z" />
+                        <!-- Resources Icon: Book -->
+                        <!-- Iron Ingot Symbol (matching other icons) -->
+                        <rect x="7" y="10" width="10" height="4" rx="1.2" stroke="currentColor" stroke-width="1.5" fill="#F3F4F6" /> <!-- Main ingot body -->
+                        <rect x="8.5" y="11.2" width="7" height="1.6" rx="0.6" stroke="currentColor" stroke-width="0.7" fill="#E5E4E2" /> <!-- Highlight -->
+                        <path d="M7 14l2 4h6l2-4" stroke="currentColor" stroke-width="1.2" fill="none" /> <!-- Facet lines -->
                     </svg>
                     <h3>Advocacy for Change</h3>
                     <p>Championing policies that promote sustainability, justice, and economic fairness.</p>
